# Deep_Research_AgentCon

./: README.md  main.py  pyproject.toml
helpers/: __init__.py
tasks/task_1/: task_1.py
tasks/task_10/: task_10.py
tasks/task_11/: task_11.py
tasks/task_11/templates/: index.html
tasks/task_2/: task_2.py
tasks/task_3/: task_3.py
tasks/task_4/: task_4.py
tasks/task_5/: task_5.py
tasks/task_6/: task_6.py
tasks/task_7/: task_7.py
tasks/task_8/: task_8.py
tasks/task_9/: task_9.py
